# KubeAir

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MODULE.bazel  README.md  SECURITY.md  clippy.toml  deny.toml  justfile  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  build-image.yml  build.yml  k8s-go-e2e.yml  k8s-rust-e2e.yml  kubeadm-e2e.yml  lint.yml  release.yml  runtime-smoke.yml  test.yml  verify.yml
benches/: BUILD.bazel  memory_profile.rs  pod_operations.rs  server_throughput.rs
crates/: BUILD.bazel
crates/kubelet-adapters/: BUILD.bazel  Cargo.toml  build.rs
crates/kubelet-adapters/proto/: BUILD.bazel  device_plugin.proto
crates/kubelet-adapters/src/: BUILD.bazel  lib.rs  proto_generated.rs
crates/kubelet-adapters/src/active_deadline/: mod.rs
crates/kubelet-adapters/src/admission/: mod.rs
crates/kubelet-adapters/src/cert_rotator/: mod.rs
crates/kubelet-adapters/src/cgroup/: mod.rs
crates/kubelet-adapters/src/checkpoint/: mod.rs
crates/kubelet-adapters/src/cni/: mod.rs
crates/kubelet-adapters/src/container_builder/: mod.rs
crates/kubelet-adapters/src/cpu_manager/: mod.rs
crates/kubelet-adapters/src/csi/: mod.rs
crates/kubelet-adapters/src/device_manager/: mod.rs
crates/kubelet-adapters/src/dra/: mod.rs
crates/kubelet-adapters/src/eviction/: manager.rs  mod.rs  pressure.rs
crates/kubelet-adapters/src/file_config/: mod.rs
crates/kubelet-adapters/src/image_gc/: mod.rs
crates/kubelet-adapters/src/image_puller/: mod.rs
crates/kubelet-adapters/src/kube_client/: mod.rs
crates/kubelet-adapters/src/kube_reporter/: mod.rs
crates/kubelet-adapters/src/kube_watcher/: mod.rs
crates/kubelet-adapters/src/lease/: mod.rs
crates/kubelet-adapters/src/lifecycle/: mod.rs
crates/kubelet-adapters/src/log_manager/: mod.rs
crates/kubelet-adapters/src/memory_manager/: mod.rs
crates/kubelet-adapters/src/mock_runtime/: mod.rs
crates/kubelet-adapters/src/network/: mod.rs
crates/kubelet-adapters/src/nfd/: labels.rs  mod.rs
crates/kubelet-adapters/src/node_status/: mod.rs
crates/kubelet-adapters/src/oom_watcher/: mod.rs
crates/kubelet-adapters/src/plugin_registration/: mod.rs
crates/kubelet-adapters/src/probe_runner/: mod.rs
crates/kubelet-adapters/src/prober/: mod.rs
crates/kubelet-adapters/src/resource_manager/: mod.rs
crates/kubelet-adapters/src/resource_version/: mod.rs
crates/kubelet-adapters/src/runtime_class/: mod.rs
crates/kubelet-adapters/src/sandbox_builder/: mod.rs
crates/kubelet-adapters/src/security_profile/: mod.rs
crates/kubelet-adapters/src/shutdown/: mod.rs
crates/kubelet-adapters/src/stats/: mod.rs
crates/kubelet-adapters/src/tls/: mod.rs
crates/kubelet-adapters/src/topology_manager/: mod.rs
crates/kubelet-adapters/src/url_config/: mod.rs
crates/kubelet-adapters/src/volume/: configmap.rs  mod.rs  projected.rs  secret.rs  service_account.rs
crates/kubelet-adapters/src/volume_expander/: mod.rs
crates/kubelet-adapters/src/volume_fsgroup/: mod.rs
crates/kubelet-app/: BUILD.bazel  Cargo.toml  build.rs
crates/kubelet-app/src/: BUILD.bazel  cli.rs  lib.rs  metrics.rs  server.rs  sync_loop.rs  tls_server.rs
crates/kubelet-app/src/exec_handler/: mod.rs
crates/kubelet-app/src/pod_worker/: mod.rs
crates/kubelet-app/src/runtime_manager/: mod.rs  pleg.rs
crates/kubelet-app/src/streaming/: mod.rs
crates/kubelet-core/: BUILD.bazel  Cargo.toml
crates/kubelet-core/src/: BUILD.bazel  error.rs  lib.rs  types.rs
crates/kubelet-core/src/config/: kubelet_configuration.rs  mod.rs
crates/kubelet-core/src/container/: mod.rs
crates/kubelet-core/src/lease/: mod.rs
crates/kubelet-core/src/node/: mod.rs
crates/kubelet-core/src/pod/: lifecycle.rs  manager.rs  mod.rs  status.rs  sync.rs
crates/kubelet-core/src/qos/: mod.rs
crates/kubelet-cri/: BUILD.bazel  Cargo.toml  build.rs
crates/kubelet-cri/proto/: BUILD.bazel  api.proto
crates/kubelet-cri/src/: BUILD.bazel  lib.rs  proto_generated.rs
crates/kubelet-cri/src/client/: mod.rs
crates/kubelet-cri/src/mock_server/: mod.rs
crates/kubelet-cri/src/types/: mod.rs
crates/kubelet-ports/: BUILD.bazel  Cargo.toml
crates/kubelet-ports/src/: BUILD.bazel  lib.rs
crates/kubelet-ports/src/driven/: container_runtime.rs  image_manager.rs  mod.rs  network.rs  node_reporter.rs  pod_source.rs  storage.rs
crates/kubelet-ports/src/driving/: kubelet_api.rs  mod.rs
docs/development/: bazelsetup.md  cheatsheet.md  development.md  releases.md
docs/phases/: production-rollout.md
hack/: bump-k8s-version.sh
hack/build-image/: BUILD.bazel  packages.lock.json  packages.yaml  packages_amd64.lock.json  packages_amd64.yaml  packages_arm64.lock.json  packages_arm64.yaml
hack/cargo/: cargo_deny.sh
hack/e2e/: colima-run.sh  memory-monitor.sh  memory-report.sh  monitor-service.sh  run-cluster-tests.sh  run-e2e.sh  run-go-e2e-in-container.sh  run-go-e2e.sh  run-in-container.sh  run-upstream-go-e2e.sh  setup-node-k3s.sh  setup-node.sh
hack/e2e/kubernetes/: README.md  colima-go-e2e.sh  go-e2e.sh  run-upstream-go-e2e.sh
hack/gazelle/: BUILD.bazel  go.mod  go.sum  main.go
hack/gazelle/plugins/: BUILD.bazel  cargo_resolver.go  cargo_resolver_test.go  gazelle_lang.go  parser.go  parser_test.go  rust.go  rust_test.go
src/: BUILD.bazel  main.rs
tests/conformance/: BUILD.bazel  conformance_test.rs
tests/e2e/: BUILD.bazel  cluster_health_test.rs  container_cleanup_test.rs  containerd_api_status_test.rs  kubectl_ops_test.rs  workload_features_test.rs
tests/integration/: BUILD.bazel  container_state_test.rs  downward_api_env_test.rs  mod.rs  pod_lifecycle_test.rs  projected_volume_test.rs  resource_orchestration_test.rs  runtime_network_storage_test.rs  security_context_test.rs
tests/smoke/: BUILD.bazel  smoke_test.rs
