""" Gazelle modules for rust """

module(
    name = "kubeair",
    version = "1.33.0",
)

# Use stable versions available in Bazel registry
bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "gazelle", version = "0.51.3")
bazel_dep(name = "rules_go", version = "0.61.1")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")

# Hermetic C/C++ toolchain for cross-compilation (zig-based, no host toolchain needed)
hermetic_cc_toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(hermetic_cc_toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//libc_aware/toolchain:linux_amd64_gnu.2.28",
    "@zig_sdk//libc_aware/toolchain:linux_arm64_gnu.2.28",
)

# Rust toolchain setup with explicit version
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    extra_target_triples = [
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",
    ],
    versions = ["1.96.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Crate Universe: Converts Cargo.lock + Cargo.toml into Bazel BUILD files
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")
