""" Gazelle modules for rust """

module(
    name = "kubeair",
    version = "1.35.0",
)

# Use stable versions available in Bazel registry
bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "gazelle", version = "0.51.3")
bazel_dep(name = "rules_go", version = "0.61.1")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")
bazel_dep(name = "rules_img", version = "0.3.13")
bazel_dep(name = "rules_distroless", version = "0.8.0")

# Hermetic C/C++ toolchain for cross-compilation (zig-based, no host toolchain needed)
hermetic_cc_toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(hermetic_cc_toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//libc_aware/toolchain:linux_amd64_gnu.2.28",
    "@zig_sdk//libc_aware/toolchain:linux_arm64_gnu.2.28",
)

# Rust toolchain setup with explicit version
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    extra_target_triples = [
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",
    ],
    versions = ["1.96.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Crate Universe: Converts Cargo.lock + Cargo.toml into Bazel BUILD files
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)

# tikv-jemalloc-sys: when cross-compiling from macOS ARM64 (16KB pages) to
# Linux ARM64 (4KB pages), jemalloc's autoconf probes the *host* page size
# and bakes it in.  Pass --with-lg-page=12 to force the Linux 4KB page size.
# Without this, the binary traps with SIGTRAP on startup inside the VM.
# Building this will take a long time (~5 mins) on macOS because jemalloc's C code is compiled with zig.
# Once compiled, the resulting .rlib is cached in Bazel's sandbox and reused for future builds.
crate.annotation(
    build_script_env = {
        "JEMALLOC_SYS_WITH_LG_PAGE": "12",
    },
    crate = "tikv-jemalloc-sys",
)
use_repo(crate, "crates")

# ── Build image ───────────────────────────────────────────────────────────────

# Base image for the hermetic CI build container.
pull = use_repo_rule("@rules_img//img:pull.bzl", "pull")

pull(
    name = "debian_trixie_slim",
    digest = "sha256:4e401d95de7083948053197a9c3913343cd06b706bf15eb6a0c3ccd26f436a0e",
    registry = "index.docker.io",
    repository = "library/debian",
    tag = "trixie-slim",
)

# Pre-built tool binaries baked into the image — amd64 and arm64.
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# ca-certificates deb for the rules_distroless cacerts rule.
# This is an _all.deb (arch-independent); same package and sha256 for amd64 and arm64.
# Sourced from the same snapshot pinned in packages_amd64.yaml / packages_arm64.yaml.
http_archive(
    name = "ca_certificates_deb",
    build_file_content = """
filegroup(
    name = "data",
    srcs = glob(["data.tar.xz", "data.tar.zst", "data.tar.gz"], allow_empty = True),
    visibility = ["//visibility:public"],
)
""",
    sha256 = "ef590f89563aa4b46c8260d49d1cea0fc1b181d19e8df3782694706adf05c184",
    type = ".deb",
    urls = ["https://snapshot.debian.org/archive/debian/20260601T000000Z/pool/main/c/ca-certificates/ca-certificates_20250419_all.deb"],
)

http_file(
    name = "bazelisk_linux_amd64",
    executable = True,
    sha256 = "5a408715e932c0250d28bd84555f12edbf70117de42f9181691c736eacc4a992",
    urls = ["https://github.com/bazelbuild/bazelisk/releases/download/v1.29.0/bazelisk-linux-amd64"],
)

http_file(
    name = "bazelisk_linux_arm64",
    executable = True,
    sha256 = "e20e8b0f4f240091b7a55bf17b9398bd4f40ee70ae0208dff95dd4c445fb4010",
    urls = ["https://github.com/bazelbuild/bazelisk/releases/download/v1.29.0/bazelisk-linux-arm64"],
)

http_archive(
    name = "just_linux_amd64",
    build_file_content = 'exports_files(["just"])',
    sha256 = "7fedeb22c7e14d9ef1551e8b793700866d80f409f9884b0e80ebb65c11d4874d",
    urls = ["https://github.com/casey/just/releases/download/1.53.0/just-1.53.0-x86_64-unknown-linux-musl.tar.gz"],
)

http_archive(
    name = "just_linux_arm64",
    build_file_content = 'exports_files(["just"])',
    sha256 = "f29d8e72380bc144465f632c7d59da311205eef2923d57511708b05b82f2e64f",
    urls = ["https://github.com/casey/just/releases/download/1.53.0/just-1.53.0-aarch64-unknown-linux-musl.tar.gz"],
)

# ── Kubernetes-versioned tool binaries ────────────────────────────────────────
# Declared and versioned in hack/deps/k8s-versions.bzl.
# To upgrade Kubernetes, run hack/bump-k8s-version.sh <new-version>.
k8s_deps_ext = use_extension("//hack/deps:k8s-versions.bzl", "k8s_deps_ext")
use_repo(
    k8s_deps_ext,
    "crictl_linux_amd64",
    "crictl_linux_arm64",
    "k3s_linux_amd64",
    "k3s_linux_arm64",
    "kubeadm_linux_amd64",
    "kubeadm_linux_arm64",
    "kubectl_linux_amd64",
    "kubectl_linux_arm64",
)

http_archive(
    name = "cargo_deny_linux_amd64",
    build_file_content = 'exports_files(["cargo-deny"])',
    sha256 = "f1f8eedc2a3ac297c540873f93785d4104b102c0079506b2a6b3221b7ec956af",
    strip_prefix = "cargo-deny-0.19.9-x86_64-unknown-linux-musl",
    urls = ["https://github.com/EmbarkStudios/cargo-deny/releases/download/0.19.9/cargo-deny-0.19.9-x86_64-unknown-linux-musl.tar.gz"],
)

http_archive(
    name = "cargo_deny_linux_arm64",
    build_file_content = 'exports_files(["cargo-deny"])',
    sha256 = "32580dcc2bc13fbeeb7c50edc38ef99c3b9ce9569a1d07a96e11b3b941f3e72e",
    strip_prefix = "cargo-deny-0.19.9-aarch64-unknown-linux-musl",
    urls = ["https://github.com/EmbarkStudios/cargo-deny/releases/download/0.19.9/cargo-deny-0.19.9-aarch64-unknown-linux-musl.tar.gz"],
)

# Debian Trixie packages installed into the build image via rules_distroless apt.
# After changing packages yaml files, regenerate the locks: just lock-build-image
apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")
apt.install(
    name = "build_image_packages_amd64",
    lock = "@@//hack/build-image:packages_amd64.lock.json",
    manifest = "//hack/build-image:packages_amd64.yaml",
)
apt.install(
    name = "build_image_packages_arm64",
    lock = "@@//hack/build-image:packages_arm64.lock.json",
    manifest = "//hack/build-image:packages_arm64.yaml",
)
use_repo(apt, "build_image_packages_amd64", "build_image_packages_arm64")
