load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "memory_profile",
    srcs = ["memory_profile.rs"],
    deps = [
        "//crates/kubelet-core/src:lib",
        "@crates//:criterion",
        "@crates//:tokio",
    ],
)

rust_binary(
    name = "pod_operations",
    srcs = ["pod_operations.rs"],
    deps = [
        "//crates/kubelet-core/src:lib",
        "//crates/kubelet-adapters/src:lib",
        "//crates/kubelet-ports/src:lib",
        "@crates//:criterion",
        "@crates//:tokio",
        "@crates//:chrono",
    ],
)

rust_binary(
    name = "server_throughput",
    srcs = ["server_throughput.rs"],
    deps = [
        "//crates/kubelet-core/src:lib",
        "//crates/kubelet-adapters/src:lib",
        "//crates/kubelet-app/src:lib",
        "@crates//:criterion",
        "@crates//:tokio",
        "@crates//:reqwest",
        "@crates//:axum",
        "@crates//:bytes",
    ],
)
