[package]
name = "kubelet-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kubelet-core = { path = "../kubelet-core" }
kubelet-ports = { path = "../kubelet-ports" }

async-trait = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
prost = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
tokio-stream = { workspace = true, features = ["net"] }
base64 = { workspace = true }
hostname = "0.3"
num_cpus = "1"
libc = { workspace = true }
rcgen = { workspace = true }
kube = { workspace = true }
tonic = { workspace = true }
tonic-health = "0.12"
tower = { workspace = true }
k8s-openapi = { workspace = true }
futures = { workspace = true }
hyper-util = "0.1"

[dev-dependencies]
mockall = { workspace = true }
rstest = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
