[package]
name = "kubelet-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kubelet-core = { path = "../kubelet-core" }
kubelet-ports = { path = "../kubelet-ports" }
kubelet-adapters = { path = "../kubelet-adapters" }
kubelet-cri = { path = "../kubelet-cri" }

tokio = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
prometheus = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
hostname = "0.3"
num_cpus = "1"
tokio-rustls = "0.26"
rustls-pemfile = "2"
hyper = { workspace = true }
hyper-util = "0.1"
once_cell = { workspace = true }
futures = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
flate2 = { workspace = true }
base64 = { workspace = true }
ring = { workspace = true }
reqwest = { workspace = true }
rcgen = "0.13"
x509-parser = "0.16"

[dev-dependencies]
rstest = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
