[package]
name = "kubelet-cri"
version.workspace = true
edition.workspace = true
description = "CRI gRPC client adapter for the Rust kubelet"

[dependencies]
kubelet-core = { path = "../kubelet-core" }
kubelet-ports = { path = "../kubelet-ports" }

# gRPC / protobuf
tonic = { version = "0.12", features = ["transport", "tls"] }
prost = "0.13"
prost-types = "0.13"

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Errors
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
tracing = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
hyper-util = "0.1"
uuid = { workspace = true }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio = { workspace = true }
tonic = { version = "0.12", features = ["transport"] }
rstest = { workspace = true }
tempfile = { workspace = true }
