[package]
name = "kubelet-ports"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kubelet-core = { path = "../kubelet-core" }
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true }
