load("@rules_distroless//distroless:defs.bzl", "cacerts")
load("@rules_img//img:image.bzl", "image_manifest")
load("@rules_img//img:layer.bzl", "image_layer", "layer_from_tar")
load("@rules_img//img:push.bzl", "image_push")

_LINUX_AMD64 = [
    "@platforms//os:linux",
    "@platforms//cpu:x86_64",
]

_LINUX_ARM64 = [
    "@platforms//os:linux",
    "@platforms//cpu:aarch64",
]

# ── CA certificate bundle (arch-independent) ────────────────────────────────
#
# rules_distroless cacerts extracts /etc/ssl/certs/ca-certificates.crt from the
# Debian ca-certificates package, ensuring bazelisk and any other TLS client
# inside the container trusts standard CAs without needing update-ca-certificates.

cacerts(
    name = "cacerts",
    package = "@ca_certificates_deb//:data",
)

layer_from_tar(
    name = "cacerts_layer",
    src = ":cacerts",
)

# ── amd64 image ──────────────────────────────────────────────────────────────

layer_from_tar(
    name = "packages_layer_amd64",
    src = "@build_image_packages_amd64//:flat",
    target_compatible_with = _LINUX_AMD64,
)

image_layer(
    name = "tools_layer_amd64",
    srcs = {
        "/usr/local/bin/bazelisk": "@bazelisk_linux_amd64//file",
        "/usr/local/bin/crictl": "@crictl_linux_amd64//:crictl",
        "/usr/local/bin/just": "@just_linux_amd64//:just",
        "/usr/local/bin/k3s": "@k3s_linux_amd64//file",
        "/usr/local/bin/kubectl": "@kubectl_linux_amd64//file",
        "/usr/local/bin/kubeadm": "@kubeadm_linux_amd64//file",
    },
    target_compatible_with = _LINUX_AMD64,
)

image_manifest(
    name = "build_image_amd64",
    base = "@debian_trixie_slim",
    layers = [
        ":packages_layer_amd64",
        ":cacerts_layer",
        ":tools_layer_amd64",
    ],
    target_compatible_with = _LINUX_AMD64,
)

# ── arm64 image ──────────────────────────────────────────────────────────────

layer_from_tar(
    name = "packages_layer_arm64",
    src = "@build_image_packages_arm64//:flat",
    target_compatible_with = _LINUX_ARM64,
)

image_layer(
    name = "tools_layer_arm64",
    srcs = {
        "/usr/local/bin/bazelisk": "@bazelisk_linux_arm64//file",
        "/usr/local/bin/crictl": "@crictl_linux_arm64//:crictl",
        "/usr/local/bin/just": "@just_linux_arm64//:just",
        "/usr/local/bin/k3s": "@k3s_linux_arm64//file",
        "/usr/local/bin/kubectl": "@kubectl_linux_arm64//file",
        "/usr/local/bin/kubeadm": "@kubeadm_linux_arm64//file",
    },
    target_compatible_with = _LINUX_ARM64,
)

image_manifest(
    name = "build_image_arm64",
    base = "@debian_trixie_slim",
    layers = [
        ":packages_layer_arm64",
        ":cacerts_layer",
        ":tools_layer_arm64",
    ],
    target_compatible_with = _LINUX_ARM64,
)

# ── Push targets ─────────────────────────────────────────────────────────────
# Tag pattern: ghcr.io/bencoxforddev/kubeair/build:<k8s-major>.<k8s-minor>
# The matrix job pushes arch-specific tags; push-index pushes the combined tag.

image_push(
    name = "push_amd64",
    image = ":build_image_amd64",
    registry = "ghcr.io",
    repository = "bencoxforddev/kubeair/build",
    tag = "1.33-amd64",
    target_compatible_with = _LINUX_AMD64,
)

image_push(
    name = "push_arm64",
    image = ":build_image_arm64",
    registry = "ghcr.io",
    repository = "bencoxforddev/kubeair/build",
    tag = "1.33-arm64",
    target_compatible_with = _LINUX_ARM64,
)

# Convenience aliases consumed by just lock-build-image
alias(
    name = "lock_amd64",
    actual = "@build_image_packages_amd64//:lock",
)

alias(
    name = "lock_arm64",
    actual = "@build_image_packages_arm64//:lock",
)

exports_files([
    "packages_amd64.yaml",
    "packages_arm64.yaml",
])
