load("@rules_distroless//distroless:defs.bzl", "cacerts")
load("@rules_img//img:image.bzl", "image_manifest")
load("@rules_img//img:layer.bzl", "image_layer", "layer_from_tar")
load("@rules_img//img:load.bzl", "image_load")
load("@rules_img//img:push.bzl", "image_push")

_LINUX_AMD64 = [
    "@platforms//os:linux",
    "@platforms//cpu:x86_64",
]

_LINUX_ARM64 = [
    "@platforms//os:linux",
    "@platforms//cpu:aarch64",
]

# ── CA certificate bundle (arch-independent) ────────────────────────────────
#
# rules_distroless cacerts extracts /etc/ssl/certs/ca-certificates.crt from the
# Debian ca-certificates package, ensuring bazelisk and any other TLS client
# inside the container trusts standard CAs without needing update-ca-certificates.

cacerts(
    name = "cacerts",
    package = "@ca_certificates_deb//:data",
)

layer_from_tar(
    name = "cacerts_layer",
    src = ":cacerts",
)

# ── amd64 image ──────────────────────────────────────────────────────────────

layer_from_tar(
    name = "packages_layer_amd64",
    src = "@build_image_packages_amd64//:flat",
    target_compatible_with = _LINUX_AMD64,
)

image_layer(
    name = "tools_layer_amd64",
    srcs = {
        "/usr/local/bin/bazelisk": "@bazelisk_linux_amd64//file",
        "/usr/local/bin/cargo-deny": "@cargo_deny_linux_amd64//:cargo-deny",
        "/usr/local/bin/crictl": "@crictl_linux_amd64//:crictl",
        "/usr/local/bin/etcd": "@etcd_linux_amd64//:etcd",
        "/usr/local/bin/just": "@just_linux_amd64//:just",
        "/usr/local/bin/kube-apiserver": "@kube_apiserver_linux_amd64//file",
        "/usr/local/bin/kube-controller-manager": "@kube_controller_manager_linux_amd64//file",
        "/usr/local/bin/kube-proxy": "@kube_proxy_linux_amd64//file",
        "/usr/local/bin/kube-scheduler": "@kube_scheduler_linux_amd64//file",
        "/usr/local/bin/kubeadm": "@kubeadm_linux_amd64//file",
        "/usr/local/bin/kubectl": "@kubectl_linux_amd64//file",
    },
    target_compatible_with = _LINUX_AMD64,
)

# rules_distroless extracts package contents without running postinst scripts,
# so update-alternatives is never called and /usr/bin/gcc is never created.
# This layer adds the unversioned symlinks that Rust's linker expects.
image_layer(
    name = "gcc_symlinks_layer_amd64",
    symlinks = {
        "/usr/bin/gcc": "/usr/bin/gcc-14",
        "/usr/bin/g++": "/usr/bin/g++-14",
        "/usr/bin/cc": "/usr/bin/gcc-14",
        "/usr/bin/c++": "/usr/bin/g++-14",
    },
    target_compatible_with = _LINUX_AMD64,
)

# update-alternatives is never run by rules_distroless, so the unversioned
# /usr/sbin/iptables symlink is absent. The CNI bridge plugin requires it.
image_layer(
    name = "iptables_symlinks_layer_amd64",
    symlinks = {
        "/usr/sbin/iptables": "/usr/sbin/iptables-legacy",
        "/usr/sbin/iptables-restore": "/usr/sbin/iptables-legacy-restore",
        "/usr/sbin/iptables-save": "/usr/sbin/iptables-legacy-save",
        "/usr/sbin/ip6tables": "/usr/sbin/ip6tables-legacy",
        "/usr/sbin/ip6tables-restore": "/usr/sbin/ip6tables-legacy-restore",
        "/usr/sbin/ip6tables-save": "/usr/sbin/ip6tables-legacy-save",
    },
    target_compatible_with = _LINUX_AMD64,
)

image_manifest(
    name = "build_image_amd64",
    base = "@debian_trixie_slim",
    layers = [
        ":packages_layer_amd64",
        ":cacerts_layer",
        ":gcc_symlinks_layer_amd64",
        ":iptables_symlinks_layer_amd64",
        ":tools_layer_amd64",
    ],
    target_compatible_with = _LINUX_AMD64,
)

# ── arm64 image ──────────────────────────────────────────────────────────────

layer_from_tar(
    name = "packages_layer_arm64",
    src = "@build_image_packages_arm64//:flat",
    target_compatible_with = _LINUX_ARM64,
)

image_layer(
    name = "tools_layer_arm64",
    srcs = {
        "/usr/local/bin/bazelisk": "@bazelisk_linux_arm64//file",
        "/usr/local/bin/cargo-deny": "@cargo_deny_linux_arm64//:cargo-deny",
        "/usr/local/bin/crictl": "@crictl_linux_arm64//:crictl",
        "/usr/local/bin/etcd": "@etcd_linux_arm64//:etcd",
        "/usr/local/bin/just": "@just_linux_arm64//:just",
        "/usr/local/bin/kube-apiserver": "@kube_apiserver_linux_arm64//file",
        "/usr/local/bin/kube-controller-manager": "@kube_controller_manager_linux_arm64//file",
        "/usr/local/bin/kube-proxy": "@kube_proxy_linux_arm64//file",
        "/usr/local/bin/kube-scheduler": "@kube_scheduler_linux_arm64//file",
        "/usr/local/bin/kubeadm": "@kubeadm_linux_arm64//file",
        "/usr/local/bin/kubectl": "@kubectl_linux_arm64//file",
    },
    target_compatible_with = _LINUX_ARM64,
)

# rules_distroless extracts package contents without running postinst scripts,
# so update-alternatives is never called and /usr/bin/gcc is never created.
# This layer adds the unversioned symlinks that Rust's linker expects.
image_layer(
    name = "gcc_symlinks_layer_arm64",
    symlinks = {
        "/usr/bin/gcc": "/usr/bin/gcc-14",
        "/usr/bin/g++": "/usr/bin/g++-14",
        "/usr/bin/cc": "/usr/bin/gcc-14",
        "/usr/bin/c++": "/usr/bin/g++-14",
    },
    target_compatible_with = _LINUX_ARM64,
)

# update-alternatives is never run by rules_distroless, so the unversioned
# /usr/sbin/iptables symlink is absent. The CNI bridge plugin requires it.
image_layer(
    name = "iptables_symlinks_layer_arm64",
    symlinks = {
        "/usr/sbin/iptables": "/usr/sbin/iptables-legacy",
        "/usr/sbin/iptables-restore": "/usr/sbin/iptables-legacy-restore",
        "/usr/sbin/iptables-save": "/usr/sbin/iptables-legacy-save",
        "/usr/sbin/ip6tables": "/usr/sbin/ip6tables-legacy",
        "/usr/sbin/ip6tables-restore": "/usr/sbin/ip6tables-legacy-restore",
        "/usr/sbin/ip6tables-save": "/usr/sbin/ip6tables-legacy-save",
    },
    target_compatible_with = _LINUX_ARM64,
)

image_manifest(
    name = "build_image_arm64",
    base = "@debian_trixie_slim",
    layers = [
        ":packages_layer_arm64",
        ":cacerts_layer",
        ":gcc_symlinks_layer_arm64",
        ":iptables_symlinks_layer_arm64",
        ":tools_layer_arm64",
    ],
    target_compatible_with = _LINUX_ARM64,
)

# ── Local load targets ───────────────────────────────────────────────────────
# Tag pattern: ghcr.io/bencoxforddev/kubeair/build:<k8s-major>.<k8s-minor>-<arch>
# Run `bazel run //hack/build-image:load_amd64` or `load_arm64` to load into
# the local podman/docker daemon for use with `BUILD_IMAGE=... just e2e`.

image_load(
    name = "load_amd64",
    daemon = "podman",
    image = ":build_image_amd64",
    tag = "ghcr.io/bencoxforddev/kubeair/build:local",
)

image_load(
    name = "load_arm64",
    daemon = "podman",
    image = ":build_image_arm64",
    tag = "ghcr.io/bencoxforddev/kubeair/build:local",
)

# ── Push targets ─────────────────────────────────────────────────────────────
# Tag pattern: ghcr.io/bencoxforddev/kubeair/build:<k8s-major>.<k8s-minor>
# The matrix job pushes arch-specific tags; push-index pushes the combined tag.

image_push(
    name = "push_amd64",
    image = ":build_image_amd64",
    registry = "ghcr.io",
    repository = "bencoxforddev/kubeair/build",
    tag = "1.35-amd64",
    target_compatible_with = _LINUX_AMD64,
)

image_push(
    name = "push_arm64",
    image = ":build_image_arm64",
    registry = "ghcr.io",
    repository = "bencoxforddev/kubeair/build",
    tag = "1.35-arm64",
    target_compatible_with = _LINUX_ARM64,
)

# Convenience aliases consumed by just lock-build-image
# Tagged manual so `bazel build //...` does not trigger package index resolution.
alias(
    name = "lock_amd64",
    actual = "@build_image_packages_amd64//:lock",
    tags = ["manual"],
)

alias(
    name = "lock_arm64",
    actual = "@build_image_packages_arm64//:lock",
    tags = ["manual"],
)

exports_files([
    "packages_amd64.yaml",
    "packages_arm64.yaml",
])
