load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

# Gazelle Rust plugin binary
go_binary(
    name = "gazelle_bin",
    embed = [":lib"],
    visibility = ["//visibility:public"],
)

# Shared library for the plugin
go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "github.com/BenCoxfordDev/kubeair/hack/gazelle",
    visibility = ["//visibility:private"],
    deps = ["//hack/gazelle/plugins"],
)

# Plugin library
go_library(
    name = "plugins",
    srcs = [
        "plugins/parser.go",
        "plugins/rust.go",
    ],
    importpath = "github.com/BenCoxfordDev/kubeair/hack/gazelle/plugins",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_bazel_gazelle//v2:gazelle",
        "@com_github_bazelbuild_buildtools//build:build",
    ],
)

# Plugin tests
go_test(
    name = "parser_test",
    srcs = ["plugins/parser_test.go"],
    embed = [":plugins"],
)
